@@ -36,7 +36,7 @@ import types
 # Other IPython utilities
 from IPython.Itpl import Itpl,itpl,printpl
 from IPython import DPyGetOpt
-
+from IPython.path import path
 if os.name == "nt":
     from IPython.winconsole import get_console_size
 
@@ -900,6 +900,16 @@ class LSString(str):
 
     n = nlstr = property(get_nlstr)
 
+    def get_paths(self):
+        try:
+            return self.__paths
+        except AttributeError:
+            self.__paths = [path(p) for p in self.split('\n') if os.path.exists(p)]
+            return self.__paths
+    
+    p = paths = property(get_paths)
+
+
 #----------------------------------------------------------------------------
 class SList(list):
     """List derivative with a special access attributes.
@@ -935,6 +945,15 @@ class SList(list):
             return self.__nlstr
 
     n = nlstr = property(get_nlstr)
+    
+    def get_paths(self):
+        try:
+            return self.__paths
+        except AttributeError:
+            self.__paths = [path(p) for p in self if os.path.exists(p)]
+            return self.__paths
+    
+    p = paths = property(get_paths)
 
 #----------------------------------------------------------------------------
 def esc_quotes(strng):
